logs/randovania.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/py'...
Listing './lib/python3.5/site-packages/py/_code'...
Listing './lib/python3.5/site-packages/py/_io'...
Listing './lib/python3.5/site-packages/py/_log'...
Listing './lib/python3.5/site-packages/py/_path'...
Listing './lib/python3.5/site-packages/py/_process'...
Listing './lib/python3.5/site-packages/py/_vendored_packages'...
Listing './lib/python3.5/site-packages/py-1.5.2.dist-info'...
Listing './lib/python3.5/site-packages/randovania'...
Compiling './lib/python3.5/site-packages/randovania/binary_file.py'...
***   File "./lib/python3.5/site-packages/randovania/binary_file.py", line 6
    file: BinaryIO
        ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/randovania/cli'...
Compiling './lib/python3.5/site-packages/randovania/cli/echoes.py'...
***   File "./lib/python3.5/site-packages/randovania/cli/echoes.py", line 188
    parser: ArgumentParser = sub_parsers.add_parser(
          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/randovania/cli/interactive.py'...
***   File "./lib/python3.5/site-packages/randovania/cli/interactive.py", line 200
    spacing: int = max(len(option_name) for option_name in options.keys())
           ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/randovania/data'...
Listing './lib/python3.5/site-packages/randovania/games'...
Listing './lib/python3.5/site-packages/randovania/games/prime'...
Compiling './lib/python3.5/site-packages/randovania/games/prime/log_parser.py'...
***   File "./lib/python3.5/site-packages/randovania/games/prime/log_parser.py", line 155
    world_number: int
                ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/randovania/resolver'...
Compiling './lib/python3.5/site-packages/randovania/resolver/data_reader.py'...
***   File "./lib/python3.5/site-packages/randovania/resolver/data_reader.py", line 107
    resource_database: ResourceDatabase
                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/randovania/resolver/echoes.py'...
***   File "./lib/python3.5/site-packages/randovania/resolver/echoes.py", line 12
    difficulty: int
              ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/randovania/resolver/game_description.py'...
***   File "./lib/python3.5/site-packages/randovania/resolver/game_description.py", line 11
    index: int
         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/randovania/resolver/state.py'...
***   File "./lib/python3.5/site-packages/randovania/resolver/state.py", line 9
    resources: CurrentResources
             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/randovania-0.8.2.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
